changing view and set up changing for controller

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -34,7 +34,7 @@
     <br> <br> <br>
 
     <form class="card-body row no-gutters align-items-center" method="get"
-          th:action="@{/search}" th:object="${animalSearchForm}">
+          th:action="@{/filter}" th:object="${animalFilterForm}">
         <div class="row">
 
             <div class="col-8">
@@ -48,7 +48,7 @@
                 <input type="checkbox" id="isDead" name="isDead" th:field="*{isDead}">
                 <label for="isDead">死</label>
             </div>
-                <div class="col-4 btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">動物園</div>
+            <div class="col-4 btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">動物園</div>
 
             <!-- Modal 動物園-->
             <div class="modal fade" id="exampleModal" tabindex="-1"
@@ -61,15 +61,13 @@
                                     aria-label="Close"></button>
                         </div>
 
-                        <!--                        &lt;!&ndash;                        blockとは&ndash;&gt;-->
-                                                <div class="modal-body">
-                                                    <div th:each="zoo, status : ${zooList}">
-                                                        <input type="checkbox" th:value="${zoo.zoo_id}"
-                                                               th:id="${zoo.zoo_id}" th:name="zoo" th:checked="${#lists.contains(animalSearchForm.zoo, zoo.zoo_id)}">
-                                                        <label th:for="${zoo.zoo_id}" th:text="${zoo.zoo_name}"></label>
-                                                    </div>
-                                                </div>
-
+                        <div class="modal-body">
+                            <div th:each="zoo, status : ${zooList}">
+                                <input type="checkbox" th:value="${zoo.zoo_id}"
+                                       th:id="${zoo.zoo_id}" th:field="${animalFilterForm.zoo}">
+                                <label th:for="${zoo.zoo_id}" th:text="${zoo.zoo_name}"></label>
+                            </div>
+                        </div>
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">決定</button>
@@ -80,72 +78,73 @@
 
         </div>
 
-<div class="row">
-    <div class="col-8">
-        <input class="form-control form-control form-control-borderless"
-               type="text" name="keyword" th:field="*{keyword}"
-               placeholder="キーワード">
-    </div>
-        <button class="col-4 btn btn-success" type="submit">検索</button>
-</div>
-</form>
+        <div class="row">
+            <div class="col-8">
+                <input class="form-control form-control form-control-borderless"
+                       type="text" name="keyword" th:field="*{keyword}"
+                       placeholder="キーワード">
+            </div>
+            <button class="col-4 btn btn-success" type="submit">検索</button>
+        </div>
+    </form>
 
-<div class="searchResult_content">
-    <div class="results">
-        <div class="koalaList">
-            <div class="koalaItem" th:each="animal : ${animalList}"
-                 th:object="${animal}">
-                <div class="koalaItem_header">
-                    <div class="koalaItemName">
-                        <p th:if="*{sex == 0}">不明</p>
-                        <img th:if="*{sex == 1}" th:src="@{../images/male.png}"> <img
-                            th:if="*{sex == 2}" th:src="@{../images/female.png}">
-                        <p th:text="*{name}"></p>
-                    </div>
-                    <div class="koalaItemInfo">
-                        <p th:text="*{animalZooHistoryList[0].zoo.zoo_name}"
-                           th:if="*{animalZooHistoryList[0].zoo.zoo_id} == 0"></p>
-                        <p th:unless="*{animalZooHistoryList[0].zoo.zoo_id} == 0">
-                            <a
-                                    th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{animalZooHistoryList[0].zoo.zoo_id})}"
-                                    th:text="*{animalZooHistoryList[0].zoo.zoo_name}"> </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="koalaItem_content">
-                    <div class="koalaItem_image">
-                        <a th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">
-                            <img th:src="@{{Path}(Path = *{profileImagePath})}">
-                        </a>
-                    </div>
-                    <div class="koalaItemData">
-                        <div class="koalaItemDataList">
-                            <ul>
-                                <li><span class="koalaItemDataList_icon birth">生年月日</span>
-                                    <p th:unless="*{stringBirthDate.equals('9999年1月1日')}"
-                                       th:text="*{stringBirthDate}"></p></li>
-                                <li><span class="koalaItemDataList_icon mother">母親</span>
-                                    <p th:if="*{#strings.isEmpty(motherAnimal.name)}">不明</p>
-                                    <p th:unless="*{#strings.isEmpty(motherAnimal.name)}">
-                                        <a
-                                                th:href="@{/detail/{animal_id}(animal_id=*{motherAnimal.animal_id})}"
-                                                th:text="*{motherAnimal.name}"> </a>
-                                    </p></li>
-                                <li><span class="koalaItemDataList_icon father">父親</span>
-                                    <p th:if="*{#strings.isEmpty(fatherAnimal.name)}">不明</p>
-                                    <p th:unless="*{#strings.isEmpty(fatherAnimal.name)}">
-                                        <a
-                                                th:href="@{/detail/{animal_id}(animal_id=*{fatherAnimal.animal_id})}"
-                                                th:text="*{fatherAnimal.name}"> </a>
-                                    </p></li>
-                            </ul>
+    <div class="searchResult_content">
+        <div class="results">
+            <div class="koalaList">
+                <div class="koalaItem" th:each="animal : ${animalList}"
+                     th:object="${animal}">
+                    <div class="koalaItem_header">
+                        <div class="koalaItemName">
+                            <p th:if="*{sex == 0}">不明</p>
+                            <img th:if="*{sex == 1}" th:src="@{../images/male.png}"> <img
+                                th:if="*{sex == 2}" th:src="@{../images/female.png}">
+                            <p th:text="*{name}"></p>
                         </div>
+                        <div class="koalaItemInfo">
+                            <p th:text="*{animalZooHistoryList[0].zoo.zoo_name}"
+                               th:if="*{animalZooHistoryList[0].zoo.zoo_id} == 0"></p>
+                            <p th:unless="*{animalZooHistoryList[0].zoo.zoo_id} == 0">
+                                <a
+                                        th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{animalZooHistoryList[0].zoo.zoo_id})}"
+                                        th:text="*{animalZooHistoryList[0].zoo.zoo_name}"> </a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="koalaItem_content">
+                        <div class="koalaItem_image">
+                            <a th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">
+                                <img th:src="@{{Path}(Path = *{profileImagePath})}">
+                            </a>
+                        </div>
+                        <div class="koalaItemData">
+                            <div class="koalaItemDataList">
+                                <ul>
+                                    <li><span class="koalaItemDataList_icon birth">生年月日</span>
+                                        <p th:unless="*{stringBirthDate.equals('9999年1月1日')}"
+                                           th:text="*{stringBirthDate}"></p></li>
+                                    <li><span class="koalaItemDataList_icon mother">母親</span>
+                                        <p th:if="*{#strings.isEmpty(motherAnimal.name)}">不明</p>
+                                        <p th:unless="*{#strings.isEmpty(motherAnimal.name)}">
+                                            <a
+                                                    th:href="@{/detail/{animal_id}(animal_id=*{motherAnimal.animal_id})}"
+                                                    th:text="*{motherAnimal.name}"> </a>
+                                        </p></li>
+                                    <li><span class="koalaItemDataList_icon father">父親</span>
+                                        <p th:if="*{#strings.isEmpty(fatherAnimal.name)}">不明</p>
+                                        <p th:unless="*{#strings.isEmpty(fatherAnimal.name)}">
+                                            <a
+                                                    th:href="@{/detail/{animal_id}(animal_id=*{fatherAnimal.animal_id})}"
+                                                    th:text="*{fatherAnimal.name}"> </a>
+                                        </p></li>
+                                </ul>
+                            </div>
 
-                        <div class="links">
-                            <a class="btn btn-sm btn-info"
-                               th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">詳細情報</a>
-                            <a class="btn btn-sm btn-primary"
-                               th:href="@{/familytree(id=${animal.animal_id})}">家系図</a>
+                            <div class="links">
+                                <a class="btn btn-sm btn-info"
+                                   th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">詳細情報</a>
+                                <a class="btn btn-sm btn-primary"
+                                   th:href="@{/familytree(id=${animal.animal_id})}">家系図</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -153,11 +152,11 @@
         </div>
     </div>
 </div>
-</div>
 <script>
 		document.write('<script src="http://'
 				+ (location.host || 'localhost').split(':')[0]
 				+ ':35729/livereload.js?snipver=2"></' + 'script>')
+
 
 
 
