--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,205 +1,202 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org"
-	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport"
-		  content="width=device-width,initial-scale=1,maximum-scale=1">
-	<title>koalaMania</title>
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,maximum-scale=1">
+    <title>koalaMania</title>
 
-	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-	<link rel="canonical"
-		  href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <link rel="canonical"
+          href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
 
-	<!-- Bootstrap core CSS -->
-	<link
-			href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-			rel="stylesheet"
-			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-			crossorigin="anonymous">
+    <!-- Bootstrap core CSS -->
+    <link
+            href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
+            rel="stylesheet"
+            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+            crossorigin="anonymous">
 
-	<!-- Favicons -->
-	<link rel="apple-touch-icon"
-		  href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
-		  sizes="180x180">
-	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png"
-		  sizes="32x32" type="image/png">
-	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png"
-		  sizes="16x16" type="image/png">
-	<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
-	<link rel="mask-icon"
-		  href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
-		  color="#7952b3">
-	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
-	<meta name="theme-color" content="#7952b3">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon"
+          href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
+          sizes="180x180">
+    <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png"
+          sizes="32x32" type="image/png">
+    <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png"
+          sizes="16x16" type="image/png">
+    <link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
+    <link rel="mask-icon"
+          href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
+          color="#7952b3">
+    <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
+    <meta name="theme-color" content="#7952b3">
 
-	<link href="/css/background.css" rel="stylesheet">
-	<link href="/css/starter-template.css" rel="stylesheet">
-	<link href="/css/index.css" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link
-			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap"
-			rel="stylesheet">
+    <link href="/css/background.css" rel="stylesheet">
+    <link href="/css/starter-template.css" rel="stylesheet">
+    <link href="/css/index.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap"
+            rel="stylesheet">
 
-	<script type="text/javascript">
+    <script type="text/javascript">
 
-	</script>
-	<link href="/css/searchResult.css" rel="stylesheet">
+    </script>
+    <link href="/css/searchResult.css" rel="stylesheet">
 </head>
 
 <body>
 <div th:replace="~{block/header_boot::headerA_boot}"></div>
 
-<!-- Modal 動物園-->
-<div class="modal fade" id="exampleModal" tabindex="-1"
-	 aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">動物園で絞り込み</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"
-						aria-label="Close"></button>
-			</div>
-			<form class="searchform" method="get" th:action="@{/search}">
-				<div class="modal-body">
+<form class="searchform" method="get" th:action="@{/search}" th:object="${animalSearchForm}">
 
-					<div th:each="zoo : ${zooList}">
-						<input type="checkbox" th:id="${zoo.zoo_id}" th:value="${zoo.zoo_name}" name="keyword">
-						<label th:for="${zoo.zoo_id}" th:text="${zoo.zoo_name}"></label>
-					</div>
+    <!-- Modal 動物園-->
+    <div class="modal fade" id="exampleModal" tabindex="-1"
+         aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">動物園で絞り込み</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
 
-				</div>
-				<div class="modal-footer">
-					<button type="submit" class="btn btn-primary">さがす</button>
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
+                    <div th:each="zoo : ${zooList}">
+                        <input type="checkbox" th:id="${zoo.zoo_id}" th:value="${zoo.zoo_name}" name="keyword">
+                        <label th:for="${zoo.zoo_id}" th:text="${zoo.zoo_name}"></label>
+                    </div>
 
-<!-- Modal 動物 今後コアラ以外の動物に拡張した際に対応が必要-->
-<div class="modal fade" id="animalModal" tabindex="-1"
-	 aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="animalModalLabel">動物で絞り込み</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"
-						aria-label="Close"></button>
-			</div>
-			<form class="searchform" method="get" th:action="@{/search}">
-				<div class="modal-body">
-					<input type="checkbox" th:text="コアラ">
-				</div>
-				<div class="modal-footer">
-					<button type="submit" class="btn btn-primary">さがす</button>
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">さがす</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal 動物 今後コアラ以外の動物に拡張した際に対応が必要-->
+    <div class="modal fade" id="animalModal" tabindex="-1"
+         aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="animalModalLabel">動物で絞り込み</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="checkbox" th:text="コアラ">
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">さがす</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-<div class="masthead">
-	<div class="masthead_content">
-		<div class="logo">
-			<img src="images/title.png" alt="title">
-		</div>
-		<div class="copy">
-			<p>コアラのことがもっと好きになるデータベース</p>
-		</div>
-		<form class="searchform" method="get" th:action="@{/search}"
-			  th:object="${animalSearchForm}">
-			<div class="topsearch">
-				<div class="container g-0">
-					<div class="row g-0 topsearch_tabs">
-						<div class="col-4 topsearch_tab first d-flex align-items-center justify-content-center">
-							<a class="search tab_active">キーワードから探す</a>
-						</div>
-						<div class="col-4 topsearch_tab second js-modal-open-zoo d-flex align-items-center justify-content-center">
-							<a class="search" data-bs-toggle="modal"
-							   data-bs-target="#exampleModal">動物園から探す</a>
-						</div>
-						<div class="col-4 topsearch_tab third js-modal-open-animal d-flex align-items-center justify-content-center">
-							<a class="search" data-bs-toggle="modal"
-							   data-bs-target="#animalModal">動物から探す</a>
-						</div>
-					</div>
-				</div>
-				<div class="topsearch_keyword">
-					<div class="formtext">
-						<input class="formtext" type="text" name="keyword" value=""
-							   placeholder="コアラ・動物園名">
-						<button class="topsearch_button" type="submit">さがす</button>
-					</div>
-				</div>
-			</div>
-		</form>
-	</div>
-</div>
+    <div class="masthead">
+        <div class="masthead_content">
+            <div class="logo">
+                <img src="images/title.png" alt="title">
+            </div>
+            <div class="copy">
+                <p>コアラのことがもっと好きになるデータベース</p>
+            </div>
+            <div class="topsearch">
+                <div class="container g-0">
+                    <div class="row g-0 topsearch_tabs">
+                        <div class="col-4 topsearch_tab first d-flex align-items-center justify-content-center">
+                            <a class="search tab_active">キーワードから探す</a>
+                        </div>
+                        <div class="col-4 topsearch_tab second js-modal-open-zoo d-flex align-items-center justify-content-center">
+                            <a class="search" data-bs-toggle="modal"
+                               data-bs-target="#exampleModal">動物園から探す</a>
+                        </div>
+                        <div class="col-4 topsearch_tab third js-modal-open-animal d-flex align-items-center justify-content-center">
+                            <a class="search" data-bs-toggle="modal"
+                               data-bs-target="#animalModal">動物から探す</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="topsearch_keyword">
+                    <div class="formtext">
+                        <input class="formtext" type="text" name="keyword" value=""
+                               placeholder="コアラ・動物園名">
+                        <button class="topsearch_button" type="submit">さがす</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
 
 <!-- Services-->
 <section class="page-section" id="services">
-	<div class="container">
-		<br>
-		<h3 class="text-center mt-0">各種機能・新着情報等</h3>
-		<hr class="divider my-2" />
-		<div class="row">
-			<div class="col-lg-3 col-md-6 text-center">
-				<div class="mt-5">
-					<i class="fas fa-4x fa-gem text-primary mb-4"></i>
-					<h3 class="h4 mb-2">Sturdy Themes</h3>
-					<p class="text-muted mb-0">Our themes are updated regularly to
-						keep them bug free!</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 text-center">
-				<div class="mt-5">
-					<i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-					<h3 class="h4 mb-2">Up to Date</h3>
-					<p class="text-muted mb-0">All dependencies are kept current
-						to keep things fresh.</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 text-center">
-				<div class="mt-5">
-					<i class="fas fa-4x fa-globe text-primary mb-4"></i>
-					<h3 class="h4 mb-2">Ready to Publish</h3>
-					<p class="text-muted mb-0">You can use this design as is, or
-						you can make changes!</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 text-center">
-				<div class="mt-5">
-					<i class="fas fa-4x fa-heart text-primary mb-4"></i>
-					<h3 class="h4 mb-2">Made with Love</h3>
-					<p class="text-muted mb-0">Is it really open source if it's
-						not made with love?</p>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <br>
+        <h3 class="text-center mt-0">各種機能・新着情報等</h3>
+        <hr class="divider my-2"/>
+        <div class="row">
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="mt-5">
+                    <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+                    <h3 class="h4 mb-2">Sturdy Themes</h3>
+                    <p class="text-muted mb-0">Our themes are updated regularly to
+                        keep them bug free!</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="mt-5">
+                    <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                    <h3 class="h4 mb-2">Up to Date</h3>
+                    <p class="text-muted mb-0">All dependencies are kept current
+                        to keep things fresh.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="mt-5">
+                    <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+                    <h3 class="h4 mb-2">Ready to Publish</h3>
+                    <p class="text-muted mb-0">You can use this design as is, or
+                        you can make changes!</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="mt-5">
+                    <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+                    <h3 class="h4 mb-2">Made with Love</h3>
+                    <p class="text-muted mb-0">Is it really open source if it's
+                        not made with love?</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <script>
 		document.write('<script src="http://'
 				+ (location.host || 'localhost').split(':')[0]
 				+ ':35729/livereload.js?snipver=2"></' + 'script>')
-	</script>
+
+</script>
 
 <script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-		crossorigin="anonymous"></script>
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 <script
-		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-		integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-		crossorigin="anonymous"></script>
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
 <script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-		integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-		crossorigin="anonymous"></script>
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
 </body>
 </html>
