--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -5,7 +5,7 @@
 
 <header th:fragment="headerA_boot">
 
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+	<nav class="navbar navbar-expand-xs navbar-dark bg-dark fixed-top">
 		<div class="container-fluid">
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
