--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,51 +1,52 @@
-<!doctype html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<!-- アカウント登録・管理は行わず、Twitter OAuthによる認証のみとするため、本ファイルは現時点では不要-->
+<!--<!doctype html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org"-->
+<!--	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">-->
 
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>koalaMania</title>
+<!--<head>-->
+<!--<meta charset="utf-8">-->
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+<!--<title>koalaMania</title>-->
 
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
-<!-- Bootstrap core CSS -->
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
-
-
-</head>
-
-<body>
-	<div th:replace="~{block/header_boot::headerA_boot}"></div>
-	<div class="container">
-		<br> <br> <br> <br>
-		<div class="row align-items-center text-center">
-			<h2>会員登録画面</h2>
-			<div class="d-flex flex-column bd-highlight mb-3">
-				<div class="p-2 bd-highlight">
-					<a th:href="@{/oauth/twitter/auth}">
-						<button class="btn btn-info mx-2" type="submit">Twitterで会員登録</button>
-					</a>
-				</div>
-				<div class="p-2 bd-highlight">
-					<a th:href="@{/login}"> ログインはこちら </a>
-				</div>
-			</div>
-		</div>
-	</div>
+<!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
+<!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
+<!--<link rel="canonical"-->
+<!--	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">-->
+<!--&lt;!&ndash; Bootstrap core CSS &ndash;&gt;-->
+<!--<link-->
+<!--	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css-->
+<!--	rel="stylesheet"-->
+<!--	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"-->
+<!--	crossorigin="anonymous">-->
 
 
+<!--</head>-->
 
-	<script>
-		document.write('<script src="http://'
-				+ (location.host || 'localhost').split(':')[0]
-				+ ':35729/livereload.js?snipver=2"></' + 'script>')
-	</script>
-</body>
-</html>
+<!--<body>-->
+<!--	<div th:replace="~{block/header_boot::headerA_boot}"></div>-->
+<!--	<div class="container">-->
+<!--		<br> <br> <br> <br>-->
+<!--		<div class="row align-items-center text-center">-->
+<!--			<h2>会員登録画面</h2>-->
+<!--			<div class="d-flex flex-column bd-highlight mb-3">-->
+<!--				<div class="p-2 bd-highlight">-->
+<!--					<a th:href="@{/oauth/twitter/auth}">-->
+<!--						<button class="btn btn-info mx-2" type="submit">Twitterで会員登録</button>-->
+<!--					</a>-->
+<!--				</div>-->
+<!--				<div class="p-2 bd-highlight">-->
+<!--					<a th:href="@{/login}"> ログインはこちら </a>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+
+
+
+<!--	<script>-->
+<!--		document.write('<script src="http://'-->
+<!--				+ (location.host || 'localhost').split(':')[0]-->
+<!--				+ ':35729/livereload.js?snipver=2"></' + 'script>')-->
+<!--	</script>-->
+<!--</body>-->
+<!--</html>-->
