--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -61,7 +61,7 @@
 								<hr class="divider my-2" />
 								<ul class="navbar-nav me-auto mb-2 mb-md-0">
 								<li class="nav-item"><a class="nav-link" aria-current="page" href="/">トップページ</a></li>
-									<li class="nav-item"><a class="nav-link" aria-current="page" href="/discription">コアラマニアとは</a></li>
+									<li class="nav-item"><a class="nav-link" aria-current="page" href="/description">コアラマニアとは</a></li>
 									<li class="nav-item"><a class="nav-link" href="/insert">コアラを登録する</a></li>
 									<li class="nav-item"><a class="nav-link" href="/search">コアラを閲覧する</a></li>
 									<li class="nav-item"><a class="nav-link" aria-current="page" href="/post">写真を投稿する</a></li>
