--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -30,7 +30,8 @@
     <!-- Vuetify3 -->
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://unpkg.com/vuetify@3.0.0-beta.3/dist/vuetify.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 
 
     <script type="importmap">
@@ -211,90 +212,98 @@
     </div>
 
 
-    <div id="mypage" class="mt-12">
+    <div id="mypage" class="mt-16">
         <!--プロフィール-->
-        <div class="d-flex flex-column justify-content-center align-items-center mt-4" th:object="${userForm}">
-            <div class="text-center">
-                <v-avatar size="120" class="mx-auto" density rounded>
-                    <v-img cover th:src="*{profileImagePath}">
-                </v-avatar>
-            </div>
-            <div class="mt-3 m-1 d-flex align-items-center">
-                <div class="fs-4 fw-bold text-break" th:text="${userForm.name}"></div>
-                <a th:if="*{twitterLinkFlag}" th:href="@{https://twitter.com/{adress}(adress=*{adress})}">
-                    <img th:if="*{twitterLinkFlag}" class="m-2 img-responsive" height="18" width="18"
-                        src="/image/2021-Twitter-logo-blue.png">
-                </a>
-            </div>
-            <div class="d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="m-1"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
-                    <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                </svg>
-                <div class="fs-7 text-break" th:text="横浜市立金沢動物園"></div>
-            </div>
-            <div id="profile" class="d-flex align-items-center m-3">
-                <div class="profile-info">
-                    <div class="profile-text text-secondary"
-                        th:text="趣味はカメラとサウナです。よく金沢動物園に出没します。開園と同時にコアラ館のもとへダッシュしますね。">
+        <v-card class="mx-auto" max-width="374">
+            <div class="d-flex flex-column justify-content-center align-items-center m-1" th:object="${userForm}">
+                <div class="text-center">
+                    <v-avatar size="120" class="mx-auto" density rounded>
+                        <v-img cover th:src="*{profileImagePath}">
+                    </v-avatar>
+                </div>
+                <div class="m-1 d-flex align-items-center mr-3 ml-3 pr-8 pl-8">
+                    <div class="fs-4 fw-bold text-center" th:text="テスト君"></div>
+                    <a th:if="*{twitterLinkFlag}" th:href="@{https://twitter.com/{adress}(adress=*{adress})}">
+                        <img th:if="*{twitterLinkFlag}" class="m-2 img-responsive" height="18" width="18"
+                            src="/image/2021-Twitter-logo-blue.png">
+                    </a>
+                </div>
+                <div class="d-flex align-items-center mr-3 ml-3 pr-8 pl-8">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="m-1"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                    </svg>
+                    <div class="fs-7 text-center" th:text="横浜市立金沢動物園"></div>
+                </div>
+                <div id="profile" class="d-flex align-items-center m-3">
+                    <div class="profile-info text-center text-blue-grey-darken-1"
+                        th:text="趣味はカメラとサウナです。ネットフリックスもよく見ます。将来は全国の動物園を訪問したいと思っています。">
                     </div>
                 </div>
+                <v-btn large class="mb-5" th:if="${editFlag}"
+                    th:onclick="' location.href = \'' + @{/user/edit/{user_id}(user_id=*{user_id})} + ' \' '">
+                    <div class="fs-6">　　プロフィール編集　　</div>
+                </v-btn>
             </div>
-            <v-btn large class="mb-3" th:if="${editFlag}"
-                th:onclick="' location.href = \'' + @{/user/edit/{user_id}(user_id=*{user_id})} + ' \' '">
-                <div class="fs-6">  プロフィール編集  </div>
-            </v-btn>
-        </div>
 
-        <!--メニューバー-->
-        <v-card>
-            <v-toolbar color="primary">
-              <v-app-bar-nav-icon></v-app-bar-nav-icon>
-        
-              <v-toolbar-title>Page title</v-toolbar-title>
-        
-              <v-spacer></v-spacer>
-        
-              <v-btn icon>
-                <v-icon>mdi-magnify</v-icon>
-              </v-btn>
-        
-              <v-btn icon>
-                <v-icon>mdi-dots-vertical</v-icon>
-              </v-btn>
-        
-              <template v-slot:extension>
-                <v-tabs
-                  v-model="model"
-                  centered
-                >
-                  <v-tab
-                    v-for="i in 3"
-                    :key="i"
-                    :value="i"
-                  >
-                    Item {{ i }}
-                  </v-tab>
-                </v-tabs>
-              </template>
-            </v-toolbar>
-        
-            <v-window v-model="model">
-              <v-window-item
-                v-for="i in 3"
-                :key="i"
-                :value="i"
-              >
-                <v-card>
-                  <v-card-text v-text="text"></v-card-text>
-                </v-card>
-              </v-window-item>
+
+            <!--メニューバー-->
+
+            <v-tabs v-model="tab" centered>
+                <v-tab v-for="item in items" :key="item" :value="item" class="text-subtitle-2">
+                    {{ item }}
+                </v-tab>
+            </v-tabs>
+            <v-window v-model="tab">
+                <v-window-item v-for="item in items" :key="item" :value="item">
+                    <v-card class="mx-auto" max-width="374">
+                        <!-- <v-progress-linear color="deep-purple" height="10" indeterminate></v-progress-linear> -->
+                        <v-img height="250" src="https://cdn.vuetifyjs.com/images/cards/cooking.png"></v-img>
+                        <v-card-title>Cafe Badilico</v-card-title>
+                        <v-card-text>
+                            <v-row align="center" class="mx-0">
+                                <v-rating :value="4.5" color="amber" dense half-increments readonly size="14">
+                                </v-rating>
+
+                                <div class="grey--text ms-4">
+                                    4.5 (413)
+                                </div>
+                            </v-row>
+
+                            <div class="my-4 text-subtitle-1">
+                                $ • Italian, Cafe
+                            </div>
+
+                            <div>Small plates, salads & sandwiches - an intimate setting with 12 indoor seats plus
+                                patio seating.</div>
+                        </v-card-text>
+                        <v-divider class="mx-4"></v-divider>
+                        <v-card-title>Tonight's availability</v-card-title>
+                        <v-card-text>
+                            <v-chip-group v-model="selection" active-class="deep-purple accent-4 white--text" column>
+                                <v-chip>5:30PM</v-chip>
+                                <v-chip>7:30PM</v-chip>
+                                <v-chip>8:00PM</v-chip>
+                                <v-chip>9:00PM</v-chip>
+                            </v-chip-group>
+                        </v-card-text>
+                        <v-card-actions>
+                            <v-btn color="deep-purple lighten-2" text @click="reserve">
+                                Reserve
+                            </v-btn>
+                        </v-card-actions>
+                    </v-card>
+
+                    <!-- <v-card flat>
+                        <v-card-text v-text="text"></v-card-text>
+                    </v-card> -->
+                </v-window-item>
             </v-window>
-          </v-card>
-          
-        
+        </v-card>
+
+
         <br><br><br><br>
         <!-- タイムライン全体 -->
         <div id="timeline" class=" p-1 pt-2" th:object="${userForm}">
@@ -532,21 +541,21 @@
     <script src="https://unpkg.com/vuetify@3.0.0-beta.3/dist/vuetify.js"></script>
     <script async src="https://ga.jspm.io/npm:es-module-shims@1.5.4/dist/es-module-shims.js"></script>
     <script type="module">
-        import { createApp, computed } from 'vue'
-        import { createVuetify } from 'vuetify'
+        import {createApp, computed} from 'vue'
+        import {createVuetify} from 'vuetify'
 
         const mypage = {
             data() {
-                return{
-                    tab : null,
-                    items : ['投稿', 'コメント', '写真', 'お気に入り'],
-                    text : 'こんにちは',
-                    message : 'AAAAAA',
-                    model : 'tab-2',
+                return {
+                    tab: null,
+                    items: ['投稿', 'コメント', '写真', 'お気に入り'],
+                    text: 'こんにちは',
+                    message: 'AAAAAA',
+                    model: '',
                 }
             },
         }
-        
+
         const vuetify = createVuetify()
         const app = createApp(mypage)
         app.use(vuetify)
@@ -554,4 +563,5 @@
 
     </script>
 </body>
+
 </html>
