--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -38,7 +38,8 @@
         {
           "imports": {
             "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js",
-            "vuetify": "https://cdnjs.cloudflare.com/ajax/libs/vuetify/3.0.0-beta.1/vuetify.esm.js"
+            "vuetify": "https://cdnjs.cloudflare.com/ajax/libs/vuetify/3.0.0-beta.1/vuetify.esm.js",
+            "axios": "https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/esm/axios.js"
           }
         }
       </script>
@@ -252,13 +253,13 @@
             <!--メニューバー-->
 
             <v-tabs v-model="tab" centered>
-                <v-tab v-for="item in items" :key="item" :value="item" class="text-subtitle-2">
-                    {{ item }}
+                <v-tab v-for="tab in tabs" :key="tab.key" :value="tab.value" class="text-subtitle-2">
+                    {{ tab.value }}
                 </v-tab>
             </v-tabs>
             <v-window v-model="tab">
-                <v-window-item v-for="item in items" :key="item" :value="item">
-                    <v-card class="mx-auto" max-width="374">
+                <v-window-item v-for="tab in tabs" :key="tab.key" :value="tab.value">
+                    <v-card class="mx-auto my-2" max-width="374">
                         <!-- <v-progress-linear color="deep-purple" height="10" indeterminate></v-progress-linear> -->
                         <v-img height="250" src="https://cdn.vuetifyjs.com/images/cards/cooking.png"></v-img>
                         <v-card-title>Cafe Badilico</v-card-title>
@@ -540,20 +541,52 @@
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/vuetify@3.0.0-beta.3/dist/vuetify.js"></script>
     <script async src="https://ga.jspm.io/npm:es-module-shims@1.5.4/dist/es-module-shims.js"></script>
+
+    <!-- axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script type="module">
         import {createApp, computed} from 'vue'
         import {createVuetify} from 'vuetify'
+        
+
+        const apiClient = axios.create({
+            baseURL: "http://localhost:8080/api",
+            headers: {
+                'Content-Type': 'application/json',
+                'Accept': 'application/json',
+                'X-CSRF-TOKEN': '${_csrf.token}'
+            },
+            withCredentials: true,
+        });
 
         const mypage = {
             data() {
                 return {
                     tab: null,
-                    items: ['投稿', 'コメント', '写真', 'お気に入り'],
+                    tabs: [
+                        {key: 1, value: '投稿'},
+                        {key: 2, value: 'コメント'},
+                        {key: 3, value: '写真'},
+                        {key: 4, value: 'お気に入り'}
+                    ],
                     text: 'こんにちは',
-                    message: 'AAAAAA',
-                    model: '',
                 }
             },
+            method: {
+                getPosts() {
+                    return apiClient.get('/users/' + count.value);
+                },
+                getComments() {
+                    return apiClient.get('/api/users/' + count.value);
+                },
+                getPhotos() {
+                    return apiClient.get('/api/users/' + count.value);
+                },
+                getFavorites() {
+                    return apiClient.get('/api/users/' + count.value);
+                },
+            }
         }
 
         const vuetify = createVuetify()
